--- a/earthquake_api_front/src/index.css
+++ b/earthquake_api_front/src/index.css
@@ -4,8 +4,11 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgb(255, 255, 255);
+  /* background-color: #242424; */
+  background-image: url('https://businesspostbd.com/files/media/daily-media/GFX/Earthquake.png');
+  background-size: cover;
+  background-attachment: fixed;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,12 +17,12 @@
 }
 
 a {
-  font-weight: 500;
-  color: #6064eb;
+  font-weight: bold;
+  color: #b4a045;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f0f0f0;
 }
 
 body {
